--- a/MAIN.html
+++ b/MAIN.html
@@ -1,7 +1,18 @@
 <!DOCTYPE HTML>
 <html
 <head>
+<style>
+  body {
+    color: black;
+  }
+  h1 {
+    color: green;
+  }
+  p {
+    color: green;
+  }
 </head>
 <body>
+  <h1> WELCOME TO THE VAULT </h1>
 </body>
 </html>
