--- a/MAIN.html
+++ b/MAIN.html
@@ -1,16 +1,10 @@
-<!DOCTYPE HTML>
+<!DOCTYPE html>
 <html>
 <head>
 <style>
-  body {
-    background-color: black;
-  }
-  h1 {
-    color: green;
-  }
-  p {
-    color: green;
-  }
+  body {background-color: black;}
+  h1 {color: green;}
+  p {color: green;}
 </style>
 </head>
 <body>
