--- a/MAIN.html
+++ b/MAIN.html
@@ -2,9 +2,9 @@
 <html>
 <head>
 <style>
-  body {background-color: black;}
-  h1 {color: green;}
-  p {color: green;}
+  body {background-color: black}
+  h1 {color: green}
+  p {color: green}
 </style>
 </head>
 <body>
